--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^17.0.35",
     "prisma": "^3.14.0",
     "typescript": "^4.6.4"
   },
